fix gap v3

--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -30,6 +30,12 @@
 		flex-wrap: wrap;
 		row-gap: rem(30);
 
+		@supports (-webkit-touch-callout: none) and (not (translate: none)) {
+      &:not(:last-child) {
+        margin-bottom: rem(30);
+      }
+    }
+
 		@include tablet {
 			flex-direction: row;
 			align-items: center;
@@ -41,10 +47,22 @@
 		flex-direction: column;
 		gap: rem(10);
 
+		@supports (-webkit-touch-callout: none) and (not (translate: none)) {
+      &:not(:last-child) {
+        margin-right: rem(10);
+      }
+    }
+
 		@include tablet {
 			flex-direction: row;
 			align-items: center;
 			gap: rem(50);
+
+			@supports (-webkit-touch-callout: none) and (not (translate: none)) {
+				&:not(:last-child) {
+					margin-right: rem(50);
+				}
+			}
 		}
 	}
 
