--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -185,14 +185,6 @@
   &--reverse {
     @include desktop {
       flex-direction: row-reverse;
-
-      @supports (-webkit-touch-callout: none) and (not (translate: none)) {
-        &:not(:last-child) {
-          margin-left: rem(70);
-          margin-right: 0;
-          margin-bottom: 0;
-        }
-      }
     }
   }
 
@@ -206,14 +198,6 @@
 
     @include desktop {
       max-width: 50%;
-
-      @supports (-webkit-touch-callout: none) and (not (translate: none)) {
-        &:not(:last-child) {
-          margin-left: 0;
-          margin-right: rem(70);
-          margin-bottom: 0;
-        }
-      }
     }
 
     @include mobile {
